--- a/catedra 1/Catedra_1.ipynb
+++ b/catedra 1/Catedra_1.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Promedio"
+    "###Promedio"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "desviacion estandar"
+    "###desviacion estandar"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "varianza"
+    "###varianza"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Persentil, Cuartil"
+    "###Persentil, Cuartil"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mediana"
+    "###Mediana"
    ]
   },
   {
@@ -278,18 +278,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moda"
+    "###Moda"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -393,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rango"
+    "###Rango"
    ]
   },
   {
@@ -771,7 +761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Valores n/a"
+    "###Valores n/a"
    ]
   },
   {
@@ -798,7 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Valores categoricos y numericos"
+    "###Valores categoricos y numericos"
    ]
   },
   {
@@ -1312,7 +1302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grafico"
+    "###Grafico"
    ]
   },
   {
